--- a/android-project/app/src/main/res/values-night/strings.xml
+++ b/android-project/app/src/main/res/values-night/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">RecipesApp</string>
     <string name="send_button">Send</string>
