--- a/android-project/app/src/main/res/values/strings.xml
+++ b/android-project/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="send_button">Send</string>
     <string name="type_in_text">initial text</string>
     <string name="type_in">type in..</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
