labor 11 login page

--- a/android-project/app/src/main/res/values/strings.xml
+++ b/android-project/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="details">Details</string>
     <string name="favorite_button">Favorite button</string>
+    <string name="server_client_id">162589133748-qjgufs6rv44fcrt4q8dstre6v1elo4cs.apps.googleusercontent.com</string>
 </resources>
